codex-rs/kimi-code/src/snapshots/codex_kimi_code__transport_tests__interleaved_events_are_immediate_and_done_waits_for_finish_and_done.snap
---
source: kimi-code/src/transport_tests.rs
expression: "normalize_opaque_item_ids(format!(\"{:#?}\", (early, terminal)))"
---
(
    [
        OutputItemAdded(
            Reasoning {
                id: Some(
                    ResponseItemId(
                        "rs_opaque_0",
                    ),
                ),
                summary: [],
                content: Some(
                    [],
                ),
                encrypted_content: None,
                internal_chat_message_metadata_passthrough: None,
            },
        ),
        ReasoningContentDelta {
            item_id: Some(
                "rs_opaque_0",
            ),
            delta: "think ",
            content_index: 0,
        },
        OutputItemAdded(
            Message {
                id: Some(
                    ResponseItemId(
                        "msg_opaque_1",
                    ),
                ),
                role: "assistant",
                content: [],
                phase: None,
                internal_chat_message_metadata_passthrough: None,
            },
        ),
        OutputTextDelta {
            item_id: Some(
                "msg_opaque_1",
            ),
            delta: "answer ",
        },
        OutputItemAdded(
            FunctionCall {
                id: Some(
                    ResponseItemId(
                        "fc_opaque_2",
                    ),
                ),
                name: "alpha",
                namespace: None,
                arguments: "",
                call_id: "call-a",
                internal_chat_message_metadata_passthrough: None,
            },
        ),
        ToolCallInputDelta {
            item_id: "fc_opaque_2",
            call_id: Some(
                "call-a",
            ),
            delta: "{\"a\":",
        },
        ToolCallInputDelta {
            item_id: "fc_opaque_2",
            call_id: Some(
                "call-a",
            ),
            delta: "1}",
        },
    ],
    [
        Ok(
            OutputItemDone(
                Reasoning {
                    id: Some(
                        ResponseItemId(
                            "rs_opaque_0",
                        ),
                    ),
                    summary: [],
                    content: Some(
                        [
                            ReasoningText {
                                text: "think ",
                            },
                        ],
                    ),
                    encrypted_content: Some(
                        "codex:kimi-chat-reasoning:{\"dialect\":\"kimi_chat\",\"key\":\"reasoning_content\",\"model\":\"k3\",\"version\":1}",
                    ),
                    internal_chat_message_metadata_passthrough: None,
                },
            ),
        ),
        Ok(
            OutputItemDone(
                Message {
                    id: Some(
                        ResponseItemId(
                            "msg_opaque_1",
                        ),
                    ),
                    role: "assistant",
                    content: [
                        OutputText {
                            text: "answer ",
                        },
                    ],
                    phase: None,
                    internal_chat_message_metadata_passthrough: None,
                },
            ),
        ),
        Ok(
            OutputItemDone(
                FunctionCall {
                    id: Some(
                        ResponseItemId(
                            "fc_opaque_2",
                        ),
                    ),
                    name: "alpha",
                    namespace: None,
                    arguments: "{\"a\":1}",
                    call_id: "call-a",
                    internal_chat_message_metadata_passthrough: None,
                },
            ),
        ),
        Ok(
            Completed {
                response_id: "chat-57",
                token_usage: Some(
                    TokenUsage {
                        input_tokens: 20,
                        cached_input_tokens: 7,
                        cache_write_input_tokens: 0,
                        output_tokens: 9,
                        reasoning_output_tokens: 4,
                        total_tokens: 29,
                    },
                ),
                terminal_outcome: ToolsReady,
            },
        ),
    ],
)
