codex-rs/kimi-code/src/snapshots/codex_kimi_code__transport_tests__noncommittable_terminals_close_partial_presentation_without_committing_it.snap
---
source: kimi-code/src/transport_tests.rs
expression: "normalize_opaque_item_ids(format!(\"{outcomes:#?}\"))"
---
[
    [
        Ok(
            OutputItemAdded(
                Message {
                    id: Some(
                        ResponseItemId(
                            "msg_opaque_3",
                        ),
                    ),
                    role: "assistant",
                    content: [],
                    phase: None,
                    internal_chat_message_metadata_passthrough: None,
                },
            ),
        ),
        Ok(
            OutputTextDelta {
                item_id: Some(
                    "msg_opaque_3",
                ),
                delta: "partial",
            },
        ),
        Ok(
            OutputItemDone(
                Message {
                    id: Some(
                        ResponseItemId(
                            "msg_opaque_3",
                        ),
                    ),
                    role: "assistant",
                    content: [
                        OutputText {
                            text: "partial",
                        },
                    ],
                    phase: None,
                    internal_chat_message_metadata_passthrough: None,
                },
            ),
        ),
        Ok(
            Completed {
                response_id: "chat-57",
                token_usage: None,
                terminal_outcome: OutputExhausted,
            },
        ),
    ],
    [
        Ok(
            OutputItemAdded(
                Reasoning {
                    id: Some(
                        ResponseItemId(
                            "rs_opaque_0",
                        ),
                    ),
                    summary: [],
                    content: Some(
                        [],
                    ),
                    encrypted_content: None,
                    internal_chat_message_metadata_passthrough: None,
                },
            ),
        ),
        Ok(
            ReasoningContentDelta {
                item_id: Some(
                    "rs_opaque_0",
                ),
                delta: "unsafe",
                content_index: 0,
            },
        ),
        Ok(
            OutputItemAdded(
                FunctionCall {
                    id: Some(
                        ResponseItemId(
                            "fc_opaque_5",
                        ),
                    ),
                    name: "blocked",
                    namespace: None,
                    arguments: "",
                    call_id: "call-x",
                    internal_chat_message_metadata_passthrough: None,
                },
            ),
        ),
        Ok(
            ToolCallInputDelta {
                item_id: "fc_opaque_5",
                call_id: Some(
                    "call-x",
                ),
                delta: "{}",
            },
        ),
        Ok(
            OutputItemDone(
                Reasoning {
                    id: Some(
                        ResponseItemId(
                            "rs_opaque_0",
                        ),
                    ),
                    summary: [],
                    content: Some(
                        [
                            ReasoningText {
                                text: "unsafe",
                            },
                        ],
                    ),
                    encrypted_content: None,
                    internal_chat_message_metadata_passthrough: None,
                },
            ),
        ),
        Ok(
            OutputItemDone(
                FunctionCall {
                    id: Some(
                        ResponseItemId(
                            "fc_opaque_5",
                        ),
                    ),
                    name: "blocked",
                    namespace: None,
                    arguments: "{}",
                    call_id: "call-x",
                    internal_chat_message_metadata_passthrough: None,
                },
            ),
        ),
        Ok(
            Completed {
                response_id: "chat-57",
                token_usage: None,
                terminal_outcome: Refusal,
            },
        ),
    ],
    [
        Ok(
            OutputItemAdded(
                Reasoning {
                    id: Some(
                        ResponseItemId(
                            "rs_opaque_1",
                        ),
                    ),
                    summary: [],
                    content: Some(
                        [],
                    ),
                    encrypted_content: None,
                    internal_chat_message_metadata_passthrough: None,
                },
            ),
        ),
        Ok(
            ReasoningContentDelta {
                item_id: Some(
                    "rs_opaque_1",
                ),
                delta: "thought",
                content_index: 0,
            },
        ),
        Err(
            ThinkingOnlyStop,
        ),
    ],
    [
        Ok(
            OutputItemAdded(
                Message {
                    id: Some(
                        ResponseItemId(
                            "msg_opaque_4",
                        ),
                    ),
                    role: "assistant",
                    content: [],
                    phase: None,
                    internal_chat_message_metadata_passthrough: None,
                },
            ),
        ),
        Ok(
            OutputTextDelta {
                item_id: Some(
                    "msg_opaque_4",
                ),
                delta: "answer",
            },
        ),
        Ok(
            OutputItemAdded(
                Reasoning {
                    id: Some(
                        ResponseItemId(
                            "rs_opaque_2",
                        ),
                    ),
                    summary: [],
                    content: Some(
                        [],
                    ),
                    encrypted_content: None,
                    internal_chat_message_metadata_passthrough: None,
                },
            ),
        ),
        Ok(
            OutputItemDone(
                Reasoning {
                    id: Some(
                        ResponseItemId(
                            "rs_opaque_2",
                        ),
                    ),
                    summary: [],
                    content: Some(
                        [
                            ReasoningText {
                                text: "",
                            },
                        ],
                    ),
                    encrypted_content: Some(
                        "codex:kimi-chat-reasoning:{\"dialect\":\"kimi_chat\",\"key\":\"reasoning_content\",\"model\":\"k3\",\"version\":1}",
                    ),
                    internal_chat_message_metadata_passthrough: None,
                },
            ),
        ),
        Ok(
            OutputItemDone(
                Message {
                    id: Some(
                        ResponseItemId(
                            "msg_opaque_4",
                        ),
                    ),
                    role: "assistant",
                    content: [
                        OutputText {
                            text: "answer",
                        },
                    ],
                    phase: None,
                    internal_chat_message_metadata_passthrough: None,
                },
            ),
        ),
        Ok(
            Completed {
                response_id: "chat-57",
                token_usage: None,
                terminal_outcome: Completed,
            },
        ),
    ],
]
