codex-rs/kimi-code/src/snapshots/codex_kimi_code__transport_tests__terminal_and_transport_failures_remain_typed.snap
---
source: kimi-code/src/transport_tests.rs
expression: failures
---
[
    Decode(
        EmptyStream,
    ),
    Decode(
        PrematureEof {
            expected: "a recognized chunk",
        },
    ),
    Decode(
        MalformedChunk(
            "key must be a string at line 1 column 2",
        ),
    ),
    Decode(
        InvalidToolJson {
            index: 0,
            arguments: "{",
        },
    ),
    Decode(
        MissingFinishReason,
    ),
    Decode(
        PrematureEof {
            expected: "[DONE]",
        },
    ),
]
